docs: update README

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-SECRET_KEY= # Replace with your actual DJANGO secret key
+SECRET_KEY= # Run `utils/generate_secret_key.py` to generate a new key
 DEBUG= # Set to False in production
