--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "15.5.1",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
